--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.1.3",
+    "@prisma/client": "5.8.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.17.19",
@@ -21,6 +22,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
@@ -35,6 +37,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
