--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@trpc/server": "11.0.0-next-beta.228",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
