--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.1.3",
     "@prisma/client": "5.8.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.17.19",
     "@trpc/client": "11.0.0-next-beta.228",
@@ -22,21 +24,25 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "firebase": "^10.7.2",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-loading-skeleton": "^3.3.1",
     "react-pdf": "^7.7.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
