--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.3",
     "@prisma/client": "5.8.1",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -31,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.3",
     "react-loading-skeleton": "^3.3.1",
     "react-pdf": "^7.7.0",
     "react-resize-detector": "^10.0.1",
