--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.3",
+    "@langchain/openai": "^0.0.13",
+    "@langchain/pinecone": "^0.0.1",
+    "@pinecone-database/pinecone": "^2.0.1",
     "@prisma/client": "5.8.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,10 +26,12 @@
     "@trpc/next": "11.0.0-next-beta.228",
     "@trpc/react-query": "11.0.0-next-beta.228",
     "@trpc/server": "11.0.0-next-beta.228",
+    "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "firebase": "^10.7.2",
+    "langchain": "^0.1.9",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "pg": "^8.11.3",
